# lindera-sqlite

./: .gitignore  Cargo.toml  Makefile  README.md  cbindgen.toml  example.env
.github/workflows/: ci.yml  periodic.yml  regression.yml  release.yml
benches/: bench.rs
resources/: lindera.json  lindera.yml
src/: common.rs  extension.rs  lib.rs
