[package]
name = "lindera-sqlite"
version = "0.44.1"
edition = "2024"
description = "Lindera tokenizer for SQLite FTS5 extention"
documentation = "https://docs.rs/lindera-sqlite"
homepage = "https://github.com/lindera/lindera-sqlite"
repository = "https://github.com/lindera/lindera-sqlite"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "sqlite"]
categories = ["text-processing"]
license = "AGPL-3.0-only"

[features]
ipadic = ["lindera/ipadic"] # Include Japanese dictionary (IPADIC)
ipadic-neologd = [
    "lindera/ipadic-neologd",
] # Include Japanese dictionary (IPADIC NEologd)
unidic = ["lindera/unidic"] # Include Japanese dictionary (UniDic)
ko-dic = ["lindera/ko-dic"] # Include Korean dictionary (ko-dic)
cc-cedict = ["lindera/cc-cedict"] # Include Chinese dictionary (CC-CEDICT)
cjk = [
    "cc-cedict",
    "ipadic",
    "ko-dic",
    "extension",
] # Include CJK dictionary (Chinese, Japanese, Korean)
extension = []
default = [] # No directories included

[lib]
name = "lindera_sqlite"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
# libc without `std`
libc = { version = "0.2.174", "default-features" = false, features = [] }
serde_json = "1.0.140"
unicode-segmentation = "1.12.0"
unicode-normalization = "0.1.24"

lindera = "0.44.1"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "bench"
harness = false
