[package]
name = "lindera-sqlite"
version = "1.3.1"
edition = "2024"
description = "Lindera tokenizer for SQLite FTS5 extention"
documentation = "https://docs.rs/lindera-sqlite"
homepage = "https://github.com/lindera/lindera-sqlite"
repository = "https://github.com/lindera/lindera-sqlite"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "sqlite"]
categories = ["text-processing"]
license = "MIT"

[features]
embedded-ipadic = [
    "lindera/embedded-ipadic",
] # Include Japanese dictionary (IPADIC)
embedded-ipadic-neologd = [
    "lindera/embedded-ipadic-neologd",
] # Include Japanese dictionary (IPADIC NEologd)
embedded-unidic = [
    "lindera/embedded-unidic",
] # Include Japanese dictionary (UniDic)
embedded-ko-dic = [
    "lindera/embedded-ko-dic",
] # Include Korean dictionary (ko-dic)
embedded-cc-cedict = [
    "lindera/embedded-cc-cedict",
] # Include Chinese dictionary (CC-CEDICT)
embedded-cjk = [
    "lindera/embedded-cjk",
] # Include CJK dictionary (Chinese, Japanese, Korean)
extension = []
default = ["extension"] # No directories included

[lib]
name = "lindera_sqlite"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1 # Single codegen unit for better optimization
opt-level = 3     # Maximum optimization level
panic = "abort"   # Abort on panic for smaller binary and faster code

[dependencies]
# libc without `std`
libc = { version = "0.2.179", default-features = false, features = [] }
serde_json = "1.0.148"
sqlite-loadable = "0.0.5"
sqlite3ext-sys = "0.0.1"
unicode-segmentation = "1.12.0"
unicode-normalization = "0.1.25"

lindera = "1.5.1"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "bench"
harness = false
