[package]
name = "lindera-sqlite"
version = "2.0.0"
edition = "2024"
description = "Lindera tokenizer for SQLite FTS5 extention"
documentation = "https://docs.rs/lindera-sqlite"
homepage = "https://github.com/lindera/lindera-sqlite"
repository = "https://github.com/lindera/lindera-sqlite"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "sqlite"]
categories = ["text-processing"]
license = "MIT"

[features]
embed-ipadic = [
    "lindera/embed-ipadic",
] # Include Japanese dictionary (IPADIC)
embed-ipadic-neologd = [
    "lindera/embed-ipadic-neologd",
] # Include Japanese dictionary (IPADIC NEologd)
embed-unidic = [
    "lindera/embed-unidic",
] # Include Japanese dictionary (UniDic)
embed-ko-dic = [
    "lindera/embed-ko-dic",
] # Include Korean dictionary (ko-dic)
embed-cc-cedict = [
    "lindera/embed-cc-cedict",
] # Include Chinese dictionary (CC-CEDICT)
embed-cjk = [
    "lindera/embed-cjk",
] # Include CJK dictionary (Chinese, Japanese, Korean)
extension = []
default = ["extension"] # No directories included

[lib]
name = "lindera_sqlite"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1 # Single codegen unit for better optimization
opt-level = 3     # Maximum optimization level
panic = "abort"   # Abort on panic for smaller binary and faster code

[dependencies]
# libc without `std`
libc = { version = "0.2.180", default-features = false, features = [] }
serde_json = "1.0.149"
sqlite-loadable = "0.0.6-alpha.6"
sqlite3ext-sys = "0.0.1"
unicode-segmentation = "1.12.0"
unicode-normalization = "0.1.25"

lindera = "2.0.1"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "bench"
harness = false
